Added home and search

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom">
+    <div class="navbar-expand m-auto navbar-text">
+      Copy right &copy; Tony getting better with Angular (v 8.0) 2019
+    </div>
+  </nav>
+
