--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,1 +1,18 @@
-<p>search works!</p>
+<form name="actionForm">
+  <div class="form-group">
+    <label for="productTitle">Product Title :</label>
+    <input type="text" id="productTitle" placeholder="Title" class="form-control">
+  </div>
+  <div class="form-group">
+      <label for="productPrice">Product Price :</label>
+      <input type="text" id="productPrice" placeholder="Price" class="form-control">
+  </div>
+  <div class="form-group">
+      <label for="productCategory">Product Category :</label>
+      <input type="text" id="productCategory" class="form-control">
+  </div>
+  <div class="form-group">
+    <button type="submit" class="btn btn-primary btn-block">Search</button>
+  </div>
+
+</form>
